<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdministrationActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/qu_mico"
            android:background="@color/design_default_color_primary"
            android:textColor="@color/white"
            android:padding="10sp"
            android:layout_marginBottom="12dp"
            android:paddingVertical="12dp"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20sp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/nombre"/>

            <EditText
                android:id="@+id/etNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20sp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/simbolo"/>

            <EditText
                android:id="@+id/etSimbolo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20sp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/num_atomico"/>

            <EditText
                android:id="@+id/etNumAtomico"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20sp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/estado"/>

            <EditText
                android:id="@+id/etEstado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/btnInsertar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/insertar"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <Button
                android:id="@+id/btnModificar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/modificar"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <Button
                android:id="@+id/btnBorrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/borrar"
                tools:ignore="DuplicateSpeakableTextCheck" />

        </LinearLayout>

        <Button
            android:id="@+id/btnVolver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="20sp"
            android:layout_marginEnd="20sp"
            android:text="@string/volver"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>