<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quimicando"
            android:background="@color/design_default_color_primary"
            android:textColor="@color/white"
            android:padding="10sp"
            android:layout_marginBottom="12dp"
            android:paddingVertical="12dp"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btnConsultar"
            android:layout_width="150dp"
            android:layout_height="75dp"
            android:textSize="20sp"
            android:layout_marginBottom="20sp"
            android:text="@string/consultar"/>
        <Button
            android:id="@+id/btnQuimico"
            android:layout_width="150dp"
            android:layout_height="75dp"
            android:textSize="20sp"
            android:layout_marginBottom="20sp"
            android:text="@string/qu_mico"/>
        <Button
            android:id="@+id/btnSalir"
            android:layout_width="150dp"
            android:layout_height="75dp"
            android:textSize="20sp"
            android:layout_marginBottom="20sp"
            android:text="@string/salir"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="21sp"
                android:text="@string/numero_de_consultas_totales"/>
            <TextView
                android:id="@+id/tvNumConsultas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="21sp"/>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>