<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        tools:ignore="MissingConstraints">



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/iniciar_sesion"
            android:background="@color/design_default_color_primary"
            android:textColor="@color/white"
            android:padding="10sp"
            android:layout_marginBottom="12dp"
            android:paddingVertical="12dp"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="16sp"
                android:text="@string/nombre_usuario"/>

            <EditText
                android:id="@+id/etNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="LabelFor,SpeakableTextPresentCheck,TextFields,TouchTargetSizeCheck"
                android:autofillHints="" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="16sp"
                android:text="@string/constrase_a"/>

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck"
                android:autofillHints="" />

        </LinearLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/iniciar_sesion"
            tools:ignore="DuplicateSpeakableTextCheck" />
        <TextView
            android:id="@+id/tvError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20sp"
            android:visibility="gone"
            android:text="@string/no_se_ha_podido_iniciar_sesion"/>
        <ImageView
            android:id="@+id/ivError"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/error"
            android:visibility="gone"
            android:importantForAccessibility="no" />

        <Button
            android:id="@+id/btnCancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="20sp"
            android:text="@string/cancelar"/>



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>